HelloUltraviolet/Fixtures/RejectedSource/FFI/HostExportMixedMode/Source/Main.uv
//! Rejected FFI specimen for mixing hosted and raw exports in one assembly.

public record HostedMixedContext {
    public sys: System
}

#host_export("C")
public procedure hostedValue(context: HostedMixedContext) -> i32 {
    return 0
}

#export("C")
public procedure rawValue() -> i32 {
    return 0
}

